Move functions around and get verification flow working
